# swiftshader

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Android.bp  Android.mk  BUILD.bazel  BUILD.gn  CHANGES  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CONTRIBUTING.txt  CONTRIBUTORS.txt  DEPS  Doxyfile  LOWERING.rst  Makefile  Makefile.standalone  OWNERS  README-wasm.md  README.google  README.md  README.rst  README.version  Readme.txt  SwiftShader.sln  WORKSPACE  android_vendor_build.sh  android_vendor_setup.sh  build_defs.bzl  c2wasm-exe.sh  codereview.settings  fetch-torture-tests.sh  license-checker.cfg  llvm2iceinsts.py  szdiff.py
src/: Android.bp  Android.mk  IceAPFloat.h  IceAPInt.h  IceASanInstrumentation.cpp  IceASanInstrumentation.h  IceAssembler.cpp  IceAssembler.h  IceAssemblerARM32.cpp  IceAssemblerARM32.h  IceAssemblerMIPS32.cpp  IceAssemblerMIPS32.h  IceAssemblerX8632.cpp  IceAssemblerX8632.h  IceAssemblerX8664.cpp  IceAssemblerX8664.h  IceAssemblerX86Base.h  IceAssemblerX86BaseImpl.h  IceBitVector.h  IceBrowserCompileServer.cpp  IceBrowserCompileServer.h  IceBuildDefs.h  IceCfg.cpp  IceCfg.h  IceCfgNode.cpp  IceCfgNode.h  IceClFlags.cpp  IceClFlags.def  IceClFlags.h  IceClFlagsExtra.h  IceCompileServer.cpp  IceCompileServer.h  IceCompiler.cpp  IceCompiler.h  IceConditionCodesARM32.h  IceConditionCodesX8632.h  IceConditionCodesX8664.h  IceConverter.cpp  IceConverter.h  IceDefs.h  (+141 more)
src/Common/: BUILD.gn  CMakeLists.txt  CPUID.cpp  CPUID.hpp  Configurator.cpp  Configurator.hpp  Debug.cpp  Debug.hpp  DebugAndroid.cpp  DebugAndroid.hpp  ExceptionHandling.hpp  GrallocAndroid.cpp  GrallocAndroid.hpp  Half.cpp  Half.hpp  Math.cpp  Math.hpp  Memory.cpp  Memory.hpp  MetaMacro.hpp  MutexLock.hpp  RecursiveLock.hpp  Resource.cpp  Resource.hpp  SharedLibrary.cpp  SharedLibrary.hpp  Socket.cpp  Socket.hpp  Thread.cpp  Thread.hpp  Timer.cpp  Timer.hpp  Types.hpp  Version.h
src/D3D8/: Capabilities.cpp  D3D8.vcxproj  D3D8.vcxproj.filters  Debug.cpp  Debug.hpp  Direct3D8.hpp  Direct3DBaseTexture8.cpp  Direct3DBaseTexture8.hpp  Direct3DCubeTexture8.cpp  Direct3DCubeTexture8.hpp  Direct3DDevice8.cpp  Direct3DDevice8.hpp  Direct3DIndexBuffer8.hpp  Direct3DPixelShader8.hpp  Direct3DResource8.hpp  Direct3DStateBlock8.hpp  Direct3DSurface8.cpp  Direct3DSurface8.hpp  Direct3DSwapChain8.cpp  Direct3DSwapChain8.hpp  Direct3DTexture8.cpp  Direct3DTexture8.hpp  Direct3DVertexBuffer8.hpp  Direct3DVertexDeclaration8.hpp  Direct3DVertexShader8.hpp  Direct3DVolume8.cpp  Direct3DVolume8.hpp  Direct3DVolumeTexture8.cpp  Direct3DVolumeTexture8.hpp
src/D3D9/: Capabilities.cpp  Capabilities.hpp  D3D9.cpp  D3D9.rc  D3D9.vcproj  D3D9.vcxproj  D3D9.vcxproj.filters  Debug.cpp  Debug.hpp  Direct3D9.cpp  Direct3D9.hpp  Direct3D9Ex.cpp  Direct3D9Ex.hpp  Direct3DBaseTexture9.cpp  Direct3DBaseTexture9.hpp  Direct3DCubeTexture9.cpp  Direct3DCubeTexture9.hpp  Direct3DDevice9.cpp  Direct3DDevice9.hpp  Direct3DDevice9Ex.cpp  Direct3DDevice9Ex.hpp  Direct3DIndexBuffer9.cpp  Direct3DIndexBuffer9.hpp  Direct3DPixelShader9.cpp  Direct3DPixelShader9.hpp  Direct3DQuery9.cpp  Direct3DQuery9.hpp  Direct3DResource9.cpp  Direct3DResource9.hpp  Direct3DStateBlock9.cpp  Direct3DStateBlock9.hpp  Direct3DSurface9.cpp  Direct3DSurface9.hpp  Direct3DSwapChain9.cpp  Direct3DSwapChain9.hpp  Direct3DTexture9.cpp  Direct3DTexture9.hpp  Direct3DVertexBuffer9.cpp  Direct3DVertexBuffer9.hpp  Direct3DVertexDeclaration9.cpp  (+14 more)
src/DartARM32/: assembler_arm.cc  assembler_arm.h
src/Device/: ASTC_Decoder.cpp  BC_Decoder.cpp  BC_Decoder.hpp  BUILD.gn  Blitter.cpp  Blitter.hpp  CMakeLists.txt  Clipper.cpp  Clipper.hpp  Color.cpp  Color.hpp  Config.cpp  Config.hpp  Context.cpp  Context.hpp  ETC_Decoder.cpp  ETC_Decoder.hpp  LRUCache.hpp  Matrix.cpp  Matrix.hpp  Memset.hpp  PixelProcessor.cpp  PixelProcessor.hpp  Plane.cpp  Plane.hpp  Point.cpp  Point.hpp  Polygon.hpp  Primitive.hpp  QuadRasterizer.cpp  QuadRasterizer.hpp  Rasterizer.hpp  Renderer.cpp  Renderer.hpp  RoutineCache.hpp  Sampler.cpp  Sampler.hpp  SetupProcessor.cpp  SetupProcessor.hpp  Stream.hpp  (+11 more)
src/LLVM/: ALL_BUILD.vcxproj  Android.mk  FastIntrinsicID.patch  INSTALL.vcxproj  LLVM.cbp  OnlyX86.patch  PACKAGE.vcxproj  ZERO_CHECK.vcxproj
src/Main/: BUILD.gn  CMakeLists.txt  CRC.cpp  Config.cpp  Config.hpp  FrameBuffer.cpp  FrameBuffer.hpp  FrameBufferAndroid.cpp  FrameBufferAndroid.hpp  FrameBufferDD.cpp  FrameBufferDD.hpp  FrameBufferFactoryOzone.cpp  FrameBufferGDI.cpp  FrameBufferGDI.hpp  FrameBufferOSX.hpp  FrameBufferOSX.mm  FrameBufferOzone.cpp  FrameBufferOzone.hpp  FrameBufferWin.cpp  FrameBufferWin.hpp  FrameBufferX11.cpp  FrameBufferX11.hpp  Logo.cpp  Register.cpp  Register.hpp  SwiftConfig.cpp  SwiftConfig.hpp  crc.c  crc.cpp  crc.h  libX11.cpp  libX11.hpp  mklogo_swiftshader.py  serialcommon.h  serialvalid.cpp  serialvalid.h
src/OpenCL/: .gitignore  OpenCL.sln
src/OpenGL/: Android.mk
src/Pipeline/: BUILD.gn  CMakeLists.txt  ComputeProgram.cpp  ComputeProgram.hpp  Constants.cpp  Constants.hpp  PixelProgram.cpp  PixelProgram.hpp  PixelRoutine.cpp  PixelRoutine.hpp  PixelShader.cpp  PixelShader.hpp  SamplerCore.cpp  SamplerCore.hpp  SetupRoutine.cpp  SetupRoutine.hpp  Shader.cpp  Shader.hpp  ShaderCore.cpp  ShaderCore.hpp  SpirvBinary.cpp  SpirvBinary.hpp  SpirvID.hpp  SpirvShader.cpp  SpirvShader.hpp  SpirvShaderArithmetic.cpp  SpirvShaderControlFlow.cpp  SpirvShaderDebug.hpp  SpirvShaderDebugger.cpp  SpirvShaderEnumNames.cpp  SpirvShaderGLSLstd450.cpp  SpirvShaderGroup.cpp  SpirvShaderImage.cpp  SpirvShaderInstructions.cpp  SpirvShaderInstructions.inc  SpirvShaderInstructions.inl  SpirvShaderMemory.cpp  SpirvShaderSampling.cpp  SpirvShaderSpec.cpp  SpirvShader_dbg.cpp  (+7 more)
src/Reactor/: Android.mk  Assert.hpp  BUILD.gn  CMakeLists.txt  CPUID.cpp  CPUID.hpp  Coroutine.hpp  DLL.cpp  DLL.hpp  Debug.cpp  Debug.hpp  DebugAndroid.cpp  DebugAndroid.hpp  EmulatedIntrinsics.cpp  EmulatedIntrinsics.hpp  EmulatedReactor.cpp  EmulatedReactor.hpp  ExecutableMemory.cpp  ExecutableMemory.hpp  LLVMAsm.cpp  LLVMAsm.hpp  LLVMJIT.cpp  LLVMJIT_ORCv1.cpp  LLVMReactor.cpp  (+57 more)
(+2256 files in other folders)
